--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@typescript-eslint/parser": "^5.48.1",
     "classnames": "^2.3.2",
     "eslint": "^8.31.0",
+    "sass": "^1.57.1",
     "typescript": "^4.9.4"
   }
 }
