--- a/package.json
+++ b/package.json
@@ -44,7 +44,9 @@
     "@typescript-eslint/parser": "^5.48.1",
     "classnames": "^2.3.2",
     "eslint": "^8.31.0",
+    "immer": "^9.0.17",
     "sass": "^1.57.1",
-    "typescript": "^4.9.4"
+    "typescript": "^4.9.4",
+    "use-immer": "^0.8.1"
   }
 }
